// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/ProfilePicture should match snapshot, no user specified, default props 1`] = `
<div>
  <span
    class="status-wrapper style--none"
  >
    <span
      class="profile-icon "
    >
      <img
        alt="user profile image"
        class="Avatar Avatar-md"
        loading="lazy"
        src="http://example.com/image.png"
      />
    </span>
    <span
      class="status "
    >
      <svg
        aria-label="Away"
        height="100%"
        role="img"
        style="fill-rule: evenodd; clip-rule: evenodd; stroke-linejoin: round; stroke-miterlimit: 1.41421;"
        viewBox="0 0 20 20"
        width="100%"
      >
        <path
          class="away--icon"
          d="M10,0C15.519,0 20,4.481 20,10C20,15.519 15.519,20 10,20C4.481,20 0,15.519 0,10C0,4.481 4.481,0 10,0ZM10.27,3C10.949,3 11.5,3.586 11.5,4.307L11.5,9.379L15.002,12.881C15.492,13.37 15.499,14.158 15.019,14.638L14.638,15.019C14.158,15.499 13.37,15.492 12.881,15.002L8.887,11.008C8.739,10.861 8.636,10.686 8.576,10.501C8.528,10.402 8.5,10.299 8.5,10.193L8.5,4.307C8.5,3.586 9.051,3 9.73,3L10.27,3Z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`components/ProfilePicture should match snapshot, no user specified, overridden props 1`] = `
<div>
  <span
    class="status-wrapper style--none"
  >
    <span
      class="profile-icon "
    >
      <img
        alt="user profile image"
        class="Avatar Avatar-xl"
        loading="lazy"
        src="http://example.com/image.png"
      />
    </span>
    <span
      class="status "
    >
      <svg
        aria-label="Away"
        height="100%"
        role="img"
        style="fill-rule: evenodd; clip-rule: evenodd; stroke-linejoin: round; stroke-miterlimit: 1.41421;"
        viewBox="0 0 20 20"
        width="100%"
      >
        <path
          class="away--icon"
          d="M10,0C15.519,0 20,4.481 20,10C20,15.519 15.519,20 10,20C4.481,20 0,15.519 0,10C0,4.481 4.481,0 10,0ZM10.27,3C10.949,3 11.5,3.586 11.5,4.307L11.5,9.379L15.002,12.881C15.492,13.37 15.499,14.158 15.019,14.638L14.638,15.019C14.158,15.499 13.37,15.492 12.881,15.002L8.887,11.008C8.739,10.861 8.636,10.686 8.576,10.501C8.528,10.402 8.5,10.299 8.5,10.193L8.5,4.307C8.5,3.586 9.051,3 9.73,3L10.27,3Z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`components/ProfilePicture should match snapshot, profile and src, default props 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    class="status-wrapper style--none"
    style="border-radius: 50%; width: 32px; height: 32px;"
  >
    <span
      class="profile-icon "
    >
      <img
        alt="user profile image"
        class="Avatar Avatar-md"
        loading="lazy"
        src="http://example.com/emoji.png"
      />
    </span>
    <span
      class="status "
    >
      <svg
        aria-label="Away"
        height="100%"
        role="img"
        style="fill-rule: evenodd; clip-rule: evenodd; stroke-linejoin: round; stroke-miterlimit: 1.41421;"
        viewBox="0 0 20 20"
        width="100%"
      >
        <path
          class="away--icon"
          d="M10,0C15.519,0 20,4.481 20,10C20,15.519 15.519,20 10,20C4.481,20 0,15.519 0,10C0,4.481 4.481,0 10,0ZM10.27,3C10.949,3 11.5,3.586 11.5,4.307L11.5,9.379L15.002,12.881C15.492,13.37 15.499,14.158 15.019,14.638L14.638,15.019C14.158,15.499 13.37,15.492 12.881,15.002L8.887,11.008C8.739,10.861 8.636,10.686 8.576,10.501C8.528,10.402 8.5,10.299 8.5,10.193L8.5,4.307C8.5,3.586 9.051,3 9.73,3L10.27,3Z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`components/ProfilePicture should match snapshot, user specified 1`] = `
<div>
  <span
    class="status-wrapper style--none"
  >
    <span
      class="profile-icon "
    >
      <img
        alt="user profile image"
        class="Avatar Avatar-md"
        loading="lazy"
        src="http://example.com/image.png"
      />
    </span>
    <span
      class="status "
    >
      <svg
        aria-label="Away"
        height="100%"
        role="img"
        style="fill-rule: evenodd; clip-rule: evenodd; stroke-linejoin: round; stroke-miterlimit: 1.41421;"
        viewBox="0 0 20 20"
        width="100%"
      >
        <path
          class="away--icon"
          d="M10,0C15.519,0 20,4.481 20,10C20,15.519 15.519,20 10,20C4.481,20 0,15.519 0,10C0,4.481 4.481,0 10,0ZM10.27,3C10.949,3 11.5,3.586 11.5,4.307L11.5,9.379L15.002,12.881C15.492,13.37 15.499,14.158 15.019,14.638L14.638,15.019C14.158,15.499 13.37,15.492 12.881,15.002L8.887,11.008C8.739,10.861 8.636,10.686 8.576,10.501C8.528,10.402 8.5,10.299 8.5,10.193L8.5,4.307C8.5,3.586 9.051,3 9.73,3L10.27,3Z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`components/ProfilePicture should match snapshot, user specified, overridden props 1`] = `
<div>
  <span
    class="status-wrapper style--none"
  >
    <span
      class="profile-icon "
    >
      <img
        alt="user profile image"
        class="Avatar Avatar-xs"
        loading="lazy"
        src="http://example.com/image.png"
      />
    </span>
    <span
      class="status "
    >
      <svg
        aria-label="Away"
        height="100%"
        role="img"
        style="fill-rule: evenodd; clip-rule: evenodd; stroke-linejoin: round; stroke-miterlimit: 1.41421;"
        viewBox="0 0 20 20"
        width="100%"
      >
        <path
          class="away--icon"
          d="M10,0C15.519,0 20,4.481 20,10C20,15.519 15.519,20 10,20C4.481,20 0,15.519 0,10C0,4.481 4.481,0 10,0ZM10.27,3C10.949,3 11.5,3.586 11.5,4.307L11.5,9.379L15.002,12.881C15.492,13.37 15.499,14.158 15.019,14.638L14.638,15.019C14.158,15.499 13.37,15.492 12.881,15.002L8.887,11.008C8.739,10.861 8.636,10.686 8.576,10.501C8.528,10.402 8.5,10.299 8.5,10.193L8.5,4.307C8.5,3.586 9.051,3 9.73,3L10.27,3Z"
        />
      </svg>
    </span>
  </span>
</div>
`;
